--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.0.13",
     "react-gauge-chart": "^0.5.1",
     "react-gauge-component": "^1.2.21",
     "react-hook-form": "^7.52.1",
